hover style and many more

--- a/pseudo.html
+++ b/pseudo.html
@@ -4,8 +4,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pseuo</title>
+
+    <style>
+
+        h3
+        {
+            color: peru;
+        }
+
+        /* hover means mous over. */
+
+        h3:hover
+
+        {
+            color: tomato;
+        
+            background-color: skyblue;
+        }
+
+        input
+        {
+            color: blue;
+            /* padding-left: 20%; */
+            outline: 0;
+            border: 1px solid purple;
+        }
+
+        a.visited
+        {
+            color: gray;
+        }
+
+        /* li:last-child
+    {
+        color: red;
+    } */
+
+    /* li:first-child
+    {
+        color: aqua;
+    } */
+
+    /* li:nth-child(2n)
+    {
+        color: brown;
+    } */
+
+    /* li:nth-child(2n+1)
+    {
+        color: blueviolet;
+    } */
+
+    li:nth-child(3n+1)
+    {
+        color: blueviolet;
+    }
+
+
+    </style>
+
 </head>
 <body>
+
+    <h3>My Heading</h3>
+
+    <input type="text">
+    <input type="text">
+    <input type="text">
+
+    <a href="https://www.youtube.com/">Youtube</a>
+    <a href="https://www.google.com/">Google</a>
+
+    <ul>
+        <li>Talha</li>
+        <li>Kawser</li>
+        <li>Fahad</li>
+        <li>Anik</li>
+        <li>Sarbik</li>
+    </ul>
     
 </body>
 </html>
